src/objects/DCE_RecordUpdateIssue__c.object
<CustomObject>
    <description>This object is used to hold the details of any issues that arise from an attempted update into the Dementia Connect database.</description>
    <fields>
        <fullName>DCEService__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DCE Service Creation or Amendment</label>
        <referenceTo>DCE_ServiceAmend__c</referenceTo>
        <relationshipLabel>Record Amend Issues</relationshipLabel>
        <relationshipName>DCEAmendmentIssues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCE_Partner_Amendment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Which is the Organisation amendment which has had the issue?</description>
        <label>DCE Partner Amendment</label>
        <referenceTo>DCE_OrgAmend__c</referenceTo>
        <relationshipLabel>DCE Record Amend Issues</relationshipLabel>
        <relationshipName>DCEAmendmentIssues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Contains the details of any errors that may need resolving</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DCE Record Amend Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DCE_Partner_Amendment__c</columns>
        <columns>DCEService__c</columns>
        <columns>StatusCode__c</columns>
        <columns>Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCEIss{0}</displayFormat>
        <label>DCE Record Amend Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCE Record Amend Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>